feature: Better size

--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,9 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
             <code class="javascript">import Sanity, { BetterCode } from 'ui-unit-tests';</code>
           </pre>
           <p>
-            <small>By Cristian Oliveira</small>
-            <small>Github <a href="https://github.com/cristianoliveira">@cristianoliveira</a></small>
+            <small>By Cristian Oliveira</small><br />
+            <small>🇧🇷🇩🇪</small><br />
+            <small>Github: <a href="https://github.com/cristianoliveira">@cristianoliveira</a></small>
           </p>
         </section>
 
@@ -90,9 +91,9 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
         <section id="history-past">
           <h2>The Agile culture</h2>
           <p>Extreme Programming.</p>
-          <p>This culture of delivering fast.</p>
-          <p>Dynamically changing software requirements.</p>
           <p>Fast product lifecycle.</p>
+          <p>Delivering fast and with quality.</p>
+          <p>Ensure quality by automated tests.</p>
         </section>
 
         <!-- <section id="coding-was-like" data-background-transition="zoom" data-transition="slide" data-background="#b5533c"> -->
