small agenda grammar change

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
         </section>
 
         <section id="agenda">
-          <h2>What is that about?</h2>
+          <h2>We will talk about</h2>
           <ul>
             <li>Automated testing background.</li>
             <li>Unit testing.</li>
