Changes after Berlinjs

--- a/src/index.html
+++ b/src/index.html
@@ -33,9 +33,14 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
           <p>
             <small>By Cristian Oliveira</small><br />
             <small>🇧🇷🇩🇪</small><br />
-            <small>⚽</small><br />
             <small>Github: <a href="https://github.com/cristianoliveira">@cristianoliveira</a></small>
           </p>
+        </section>
+
+        <section data-background="./images/sumup.jpg">
+          <div style="background: white; box-shadow: none">
+            <img style="background: white; box-shadow: none" src="./images/sumup-logo.jpg" alt=""/>
+          </div>
         </section>
 
         <section id="agenda">
@@ -254,8 +259,6 @@ function cityBirthday(content, city, year, month, day) {
   content += ' This year of ' + year + ' ';
   content += 'the city is ' + age + ' years old.';
 
-  setTimeout(() => console.log(content), 0);
-
   return content;
 }
               </code>
@@ -298,7 +301,7 @@ it("shouldn't be that complicated to test", function() {
             </section>
             <section data-background="#cb2431">
               <h4>Same principle for components</h4>
-              <blockquote>State is the root of all evil - A guy from the bible</blockquote>
+              <small>"State is the root of all evil" - That guy from the book</small>
               <div>
                 <img src="./images/example_bad_component_code.png" alt=""/>
               </div>
@@ -313,6 +316,22 @@ it("shouldn't be that complicated to test", function() {
               <h4>
                 TDD is
               </h4>
+            </section>
+          </section>
+
+            <section>
+              <h3>What is TDD? How does it work?</h3>
+              <img width="500" src="./images/tdd-flow.png" alt=""/>
+            </section>
+
+          <section style="padding: 10px">
+            <section  style="background-position: center top; " data-background="./images/tdd-1.png">
+            </section>
+            <section data-background="./images/tdd-2.png">
+            </section>
+            <section data-background="./images/tdd-3.png">
+            </section>
+            <section data-background="./images/tdd-4.png">
             </section>
           </section>
 
@@ -341,10 +360,6 @@ it("shouldn't be that complicated to test", function() {
               <li>You need to know well what you'll implement.</li>
               <li>It takes extra time.</li>
             </ol>
-          </section>
-
-          <section>
-            <img width="500" src="./images/tdd-flow.png" alt=""/>
           </section>
 
           <section id="what-to-test">
@@ -439,9 +454,9 @@ it("shouldn't be that complicated to test", function() {
             </section>
           </section>
           <section id="demo">
-            <h2>Let's try it?</h2>
-            <h5>clone the repo:</h5>
-            <a href="https://github.com/cristianoliveira/blog-react-tdd-workshop" target="_blank">https://github.com/cristianoliveira/blog-react-tdd-workshop</a>
+            <h2>Thanks</h2>
+            <h5>The repo with this presentation</h5>
+            <a href="https://github.com/cristianoliveira/ui-tdd-workshop" target="_blank">https://github.com/cristianoliveira/ui-tdd-workshop</a>
           </section>
         </div>
       </div>
