--- a/index.html
+++ b/index.html
@@ -78,17 +78,18 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 
               <p>It was in a time where big companies were ruling the whole culture.</p>
               <p>The product planning and deliverying were very slow and burocratic. <br />
-                The QA process were strict and heavily manual work were required. Companies used to relied too much on manual testing for ensuring their product's quality.<br />
+                The QA process were strict and heavily manual work were required.
+                Companies used to rely too much on manual testing in order to ensure the quality of their product.<br />
                 That culture led to different kind of problems.<br /><br />
               </p>
               <ol>
                 <li>No confidence for changing code.</li>
-                <li>Fear of regression bugs in each change.</li>
+                <li>Fear of regression in each change.</li>
                 <li>Legacy code that "just works".</li>
                 <li>Eternal fighting among Devs and QAs.</li>
                 <li>A lot of stress.</li>
               </ol>
-              <p>People where not happy also a lot of money and time were wasted.... </p>
+              <p>People were not happy also a lot of money and time were wasted.... </p>
             </div>
           </section>
 
@@ -170,7 +171,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 const component = shallow(< Component />);
                   </code>
 <small>
-  For reall unit testing. It doesn't render the component's children.
+  For real unit testing. It doesn't render the component's children.
 </small>
                 </pre>
             <pre>
@@ -178,7 +179,7 @@ const component = shallow(< Component />);
 const component = mount(< Component />);
                   </code>
 <small>
-  For Full DOM rendering. It is ideal for use cases where you have components
+  For Full DOM rendering. It's ideal for use cases where you have components
   that may interact with DOM apis, or may require the full lifecycle.
 </small>
               </pre>
@@ -346,7 +347,7 @@ it("shouldn't be that complicated to test", function() {
           <section>
             <h2>Pros</h2>
             <ol>
-              <li>Reduce 40%-80% of bugs.</li>
+              <li>Reduces 40%-80% of bugs.</li>
               <li>Better objects/functions API.</li>
               <li>Leads to descritive tests.</li>
               <li>Fast feedback loop.</li>
@@ -358,7 +359,7 @@ it("shouldn't be that complicated to test", function() {
             <ol>
               <li>It's hard at the beggining.</li>
               <li>You need to know well what you'll implement.</li>
-              <li>It takes extra time.</li>
+              <li>It takes an extra time.</li>
             </ol>
           </section>
 
@@ -456,7 +457,7 @@ it("shouldn't be that complicated to test", function() {
           <section id="demo">
             <h2>Thanks</h2>
             <h5>The repo with this presentation</h5>
-            <a href="https://github.com/cristianoliveira/ui-tdd-workshop" target="_blank">https://github.com/cristianoliveira/ui-tdd-workshop</a>
+            <a href="https://github.com/cristianoliveira/react-meets-tdd" target="_blank">https://github.com/cristianoliveira/react-meets-tdd</a>
           </section>
         </div>
       </div>
